--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
@@ -45,40 +45,42 @@
     background-color: transparent;
     position: absolute;
     z-index: 1;
-    top: 50%;
     right: 15px;
-    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 24px;
+    width: 24px;
   }
   &__control {
     width: 100%;
-    color: $c-black;
-    font-size: 16px;
+    color: color(neutral, black);
     font-weight: 500;
-    padding: 12px 15px;
-    border-radius: 5px;
+    border-radius: 4px;
     font-family: $font-main;
-    background-color: $c-white;
-    border: 1px solid $c-gray-med;
+    background-color: color(neutral, white);
+    border: 1px solid color(neutral, 03);
     transition: all 0.25s;
     &::placeholder {
-      font-weight: 300;
-      color: $c-white-drk;
+      font-weight: 400;
+      color: color(neutral, 06);
     }
-    &:focus {
+    &:hover {
+      border-color: color(neutral, black);
+    }
+    &:focus,
+    &:focus-visible {
       outline: none;
-      border-color: $c-black;
-      box-shadow: 0 0 0 4px rgba($c-black, 0.4);
+      border-color: color(support, focus);
+      box-shadow: inset 0 0 0 1px color(support, focus);
     }
     &.ng-dirty:invalid,
     &.ng-dirty.ng-invalid,
     &.ng-touched.ng-invalid,
     &.ng-touched.invalid {
-      border-color: $c-red;
-      box-shadow: none;
-      &:focus {
-        box-shadow: 0 0 0 4px rgba($c-red, 0.4);
-      }
-      & + .input__error {
+      border-color: color(support, error);
+      box-shadow: inset 0 0 0 1px color(support, error);
+      & ~ .input__error {
         display: flex;
       }
     }
@@ -138,12 +140,40 @@
       }
     }
   }
+  &--size {
+    &-small {
+      .input {
+        &__visibility-toggle {
+          top: 7px;
+        }
+        &__control {
+          padding: spacing(03) spacing(05);
+          font-size: 14px;
+          line-height: 20px;
+          letter-spacing: 0.16px;
+        }
+      }
+    }
+    &-medium {
+      .input {
+        &__visibility-toggle {
+          top: 13px;
+        }
+        &__control {
+          padding: spacing(04) spacing(05);
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0.16px;
+        }
+      }
+    }
+  }
   &--disabled {
     pointer-events: none;
     .input {
       &__control {
-        border-color: $c-white-lgt;
-        background-color: $c-white-lgt;
+        border-color: color(neutral, 01);
+        background-color: color(neutral, 01);
       }
     }
   }
