ADS-26 add support for standard status icons in custom messages

--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.html
@@ -72,26 +72,55 @@
     </button>
     <div class="input__error" *ngIf="validationErrorMsg">
       <span class="input__error-icon">
-        <svg
-          width="3"
-          height="7"
-          viewBox="0 0 3 7"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M0.850098 5.85593C0.850098 5.77467 0.877181 5.69342 0.904264 5.61217C0.931347 5.53092 0.985514 5.47676 1.03968 5.42259C1.09385 5.36842 1.1751 5.31426 1.25635 5.28717C1.3376 5.26009 1.41885 5.23301 1.52718 5.23301C1.63551 5.23301 1.71676 5.26009 1.79801 5.28717C1.87926 5.31426 1.96051 5.36842 2.01468 5.42259C2.06885 5.47676 2.12301 5.53092 2.1501 5.61217C2.17718 5.69342 2.20426 5.77467 2.20426 5.85593C2.20426 5.93717 2.17718 6.01842 2.1501 6.09967C2.12301 6.18092 2.06885 6.23509 2.01468 6.28926C1.96051 6.34342 1.87926 6.39759 1.79801 6.42467C1.71676 6.45176 1.63551 6.47884 1.52718 6.47884C1.41885 6.47884 1.3376 6.45176 1.25635 6.42467C1.1751 6.39759 1.12093 6.34342 1.03968 6.28926C0.985514 6.23509 0.931347 6.18092 0.904264 6.09967C0.877181 6.01842 0.850098 5.96426 0.850098 5.85593ZM1.9876 4.61009H1.0126L0.877181 0.520508H2.12301L1.9876 4.61009Z"
-            fill="white"
-          />
-        </svg>
+        <ng-container *ngTemplateOutlet="iconStatusNegative"></ng-container>
       </span>
       <aus-typography [text]="validationErrorMsg"></aus-typography>
     </div>
     <div class="input__custom-status">
-      <ng-content select="[statusMsg]"></ng-content>
+      <div class="input__custom-status-icon">
+        <ng-container *ngIf="statusIcon === 'negative'">
+          <ng-container *ngTemplateOutlet="iconStatusNegative"></ng-container>
+        </ng-container>
+        <ng-container *ngIf="statusIcon === 'positive'">
+          <ng-container *ngTemplateOutlet="iconStatusPositive"></ng-container>
+        </ng-container>
+      </div>
+      <div class="input__custom-status-content">
+        <ng-content select="[statusMsg]"></ng-content>
+      </div>
     </div>
   </div>
 </fieldset>
+
+<ng-template #iconStatusNegative>
+  <svg
+    width="14"
+    height="14"
+    viewBox="0 0 14 14"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      d="M6.33333 9.00001H7.66666V10.3333H6.33333V9.00001ZM6.33333 3.66668H7.66666V7.66668H6.33333V3.66668ZM6.99333 0.333344C3.31333 0.333344 0.333328 3.32001 0.333328 7.00001C0.333328 10.68 3.31333 13.6667 6.99333 13.6667C10.68 13.6667 13.6667 10.68 13.6667 7.00001C13.6667 3.32001 10.68 0.333344 6.99333 0.333344ZM7 12.3333C4.05333 12.3333 1.66666 9.94668 1.66666 7.00001C1.66666 4.05334 4.05333 1.66668 7 1.66668C9.94666 1.66668 12.3333 4.05334 12.3333 7.00001C12.3333 9.94668 9.94666 12.3333 7 12.3333Z"
+      fill="#EB002A"
+    />
+  </svg>
+</ng-template>
+
+<ng-template #iconStatusPositive>
+  <svg
+    width="14"
+    height="14"
+    viewBox="0 0 14 14"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      d="M13.6666 2.45334L6.05998 10.0667L3.23331 7.24001L4.17331 6.30001L6.05998 8.18668L12.7266 1.52001L13.6666 2.45334ZM12.1933 5.81334C12.28 6.19334 12.3333 6.59334 12.3333 7.00001C12.3333 9.94668 9.94665 12.3333 6.99998 12.3333C4.05331 12.3333 1.66665 9.94668 1.66665 7.00001C1.66665 4.05334 4.05331 1.66668 6.99998 1.66668C8.05331 1.66668 9.02665 1.97334 9.85331 2.50001L10.8133 1.54001C9.73331 0.78001 8.41998 0.333344 6.99998 0.333344C3.31998 0.333344 0.333313 3.32001 0.333313 7.00001C0.333313 10.68 3.31998 13.6667 6.99998 13.6667C10.68 13.6667 13.6666 10.68 13.6666 7.00001C13.6666 6.20668 13.52 5.44668 13.2666 4.74001L12.1933 5.81334Z"
+      fill="#128816"
+    />
+  </svg>
+</ng-template>
 
 <ng-template #input>
   <input
