--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
@@ -86,7 +86,7 @@
     }
     &--textarea {
       resize: none;
-      height: 80px;
+      height: 124px;
     }
   }
   &__custom-status {
@@ -154,6 +154,12 @@
           font-size: 14px;
           line-height: 20px;
           letter-spacing: 0.16px;
+          &--textarea {
+            padding: spacing(04) spacing(05);
+            font-size: 16px;
+            line-height: 24px;
+            letter-spacing: 0.16px;
+          }
         }
       }
     }
