--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
@@ -39,8 +39,8 @@
   }
   &__control-icon {
     position: absolute;
-    left: 19px;
     pointer-events: none;
+    transition: all 0.25s;
   }
   &__visibility-toggle {
     border: 0;
@@ -56,6 +56,7 @@
     justify-content: center;
     height: 24px;
     width: 24px;
+    transition: all 0.25s;
   }
   &__control {
     width: 100%;
@@ -156,6 +157,7 @@
         }
         &__visibility-toggle {
           top: 7px;
+          transform: scale(0.8);
         }
         &__control {
           padding: spacing(03) spacing(05);
@@ -189,9 +191,27 @@
     }
   }
   &--search {
-    .input {
-      &__control {
-        padding-left: spacing(09);
+    &.input--size {
+      &-small {
+        .input {
+          &__control {
+            padding-left: spacing(08);
+            &-icon {
+              left: 16px;
+              transform: scale(0.8);
+            }
+          }
+        }
+      }
+      &-medium {
+        .input {
+          &__control {
+            padding-left: spacing(09);
+            &-icon {
+              left: 19px;
+            }
+          }
+        }
       }
     }
   }
