--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
@@ -39,7 +39,7 @@
           position: absolute;
           border-radius: 5px;
           pointer-events: none;
-          box-shadow: 0 0 0 4px rgba($c-black, 0.4);
+          box-shadow: 0px 0px 10px 2px rgba(color(neutral, black), 0.102);
         }
         .ng-select-container {
           width: 100%;
@@ -47,6 +47,7 @@
           border-radius: 5px;
           background-color: $c-white;
           border: 1px solid $c-gray-med;
+          transition: border-color 0.25s;
           input {
             caret-color: transparent;
             padding: 0 15px !important;
@@ -55,6 +56,14 @@
             font-weight: 500 !important;
             font-family: $font-main !important;
             width: calc(100% - 30px) !important;
+          }
+          &:hover {
+            border-color: color(neutral, black);
+          }
+          &.ng-has-value {
+            .ng-value ::ng-deep .typography {
+              font-weight: 500;
+            }
           }
         }
         .ng-option,
@@ -78,7 +87,7 @@
         .ng-dropdown-panel {
           padding: 6px 0;
           z-index: 1 !important;
-          border: 1px solid $c-black;
+          border: 1px solid color(support, focus);
           background-color: $c-white;
           border-bottom-left-radius: 5px;
           border-bottom-right-radius: 5px;
@@ -100,17 +109,47 @@
           .ng-select-container {
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
-          }
-        }
-        &-focused {
-          .ng-select-container {
-            border-color: $c-black;
+            &:after {
+              content: "";
+              position: absolute;
+              z-index: 1;
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              width: calc(100% - 2px);
+              height: 1px;
+              background-color: color(neutral, black);
+            }
           }
           .ng-dropdown-panel {
-            box-shadow: 0 0 0 4px rgba($c-black, 0.4);
+            &:before {
+              content: "";
+              position: absolute;
+              z-index: 1;
+              top: -1px;
+              left: 50%;
+              width: calc(100% - 2px);
+              height: 2px;
+              transform: translateX(-50%);
+              background-color: color(neutral, white);
+            }
           }
           &:before {
             display: block;
+          }
+        }
+        &-opened,
+        &-focused {
+          .ng-select-container {
+            border-color: color(support, focus);
+            box-shadow: inset 0 0 0 1px color(support, focus);
+            &:hover {
+              border-color: color(support, focus);
+            }
+          }
+          .ng-dropdown-panel {
+            box-shadow: 0px 0px 10px 2px rgba(color(neutral, black), 0.102),
+              inset 0 0 0 1px color(support, focus);
           }
           &.ng-select-opened {
             &:before {
@@ -146,15 +185,13 @@
   &__arrow {
     top: 50%;
     right: 15px;
-    z-index: 1;
+    z-index: 1002;
     position: absolute;
     pointer-events: none;
-    transform: translate(-50%, -50%) rotate(90deg);
-    ::ng-deep {
-      span {
-        color: $c-white-drk;
-      }
-    }
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   &--disabled {
     pointer-events: none;
@@ -162,8 +199,8 @@
       &__control {
         ::ng-deep {
           .ng-select-container {
-            border-color: $c-white-lgt;
-            background-color: $c-white-lgt;
+            border-color: color(neutral, 01);
+            background-color: color(neutral, 01);
           }
         }
       }
