ADS-26 hide placeholder if there is a search term

--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.html
@@ -44,7 +44,7 @@
     <div
       class="dropdown__control"
       [ngClass]="{
-        'no-value': !selected
+        'no-value': !selected && !searchTerm
       }"
     >
       <ng-select
@@ -57,6 +57,7 @@
         [placeholder]="placeholder"
         (change)="onChange($event)"
         (ngModelChange)="selectedChange.emit(selected)"
+        (search)="onSearch($event)"
       >
         <ng-option *ngFor="let item of items" [value]="item">
           <aus-typography
