--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
@@ -97,14 +97,16 @@
   }
   &__custom-status {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
-    padding: 6px 8px 0 8px;
+    padding: spacing(03) spacing(03) 0 0;
     &:empty {
       display: none;
     }
     &-icon {
       margin-right: spacing(03);
+      display: flex;
+      align-items: center;
     }
     &-content {
       flex: 1;
@@ -126,7 +128,7 @@
     display: none;
     align-items: center;
     justify-content: flex-start;
-    padding: 6px 8px 0 8px;
+    padding: spacing(03) spacing(03) 0 0;
     pointer-events: none;
     transition: all 0.25s;
     &-icon {
@@ -146,6 +148,34 @@
             ),
           )
         );
+      }
+    }
+  }
+  &--negative {
+    .input {
+      &__control {
+        border-color: color(support, error);
+        box-shadow: inset 0 0 0 1px color(support, error);
+      }
+      &__custom-status {
+        &-content {
+          color: color(support, error);
+          ::ng-deep .typography {
+            color: color(support, error);
+          }
+        }
+      }
+    }
+  }
+  &--positive {
+    .input {
+      &__custom-status {
+        &-content {
+          color: color(support, success);
+          ::ng-deep .typography {
+            color: color(support, success);
+          }
+        }
       }
     }
   }
