--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
@@ -80,6 +80,9 @@
           .typography {
             line-height: 16px;
           }
+          .check-icon {
+            display: none;
+          }
         }
         .ng-clear-wrapper {
           display: none;
@@ -93,14 +96,28 @@
           border-bottom-right-radius: 5px;
           .ng-option {
             color: $c-black;
-            padding: 5px 16px;
+            padding: 6px spacing(05);
             &:hover,
-            &-marked {
-              color: $c-white;
-              background-color: $c-black;
+            &-marked,
+            &-selected {
+              color: color(neutral, white);
+              background-color: color(neutral, black);
               .typography {
-                color: $c-white;
+                color: color(neutral, white);
                 font-weight: 500;
+              }
+            }
+            &-label {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              .check-icon {
+                display: none;
+              }
+            }
+            &-selected {
+              .ng-option-label .check-icon {
+                display: block;
               }
             }
           }
