ADS-26 adjust icon alignment and fix story

--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
@@ -215,6 +215,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    &-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
     &-content {
       flex: 1;
       margin-left: spacing(03);
