--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
@@ -66,6 +66,10 @@
             }
           }
         }
+        .ng-input {
+          display: flex;
+          align-items: center;
+        }
         .ng-option,
         .ng-placeholder {
           font-size: 16px;
@@ -94,6 +98,8 @@
           background-color: $c-white;
           border-bottom-left-radius: 5px;
           border-bottom-right-radius: 5px;
+          max-height: 280px;
+          overflow-y: auto;
           .ng-option {
             color: $c-black;
             padding: 6px spacing(05);
@@ -199,16 +205,36 @@
       }
     }
   }
-  &__arrow {
+  &__btns {
     top: 50%;
     right: 15px;
     z-index: 1002;
     position: absolute;
-    pointer-events: none;
     transform: translateY(-50%);
+  }
+  &__btns,
+  &__clear,
+  &__arrow {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+  &__clear {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    background: transparent;
+    margin-right: spacing(02);
+    border-radius: 100%;
+    &:focus-visible {
+      box-shadow: 0 0 0 2px color(support, focus);
+      outline: none;
+      border: 0;
+    }
+  }
+  &__arrow {
+    pointer-events: none;
   }
   &__status {
     padding: spacing(03) spacing(03) 0 0;
@@ -293,6 +319,52 @@
           ::ng-deep .ng-select .ng-select-container {
             padding: spacing(04) spacing(05);
             padding-right: spacing(08);
+          }
+        }
+      }
+    }
+  }
+  &--multiselect {
+    .dropdown {
+      &__control {
+        ::ng-deep {
+          .ng-select {
+            .ng-placeholder {
+              top: 50%;
+              left: spacing(05);
+              transform: translateY(-50%);
+            }
+            .ng-select-container {
+              input {
+                padding: 0 !important;
+              }
+            }
+            .ng-value-container {
+              margin: calc(spacing(02) * -1);
+            }
+            .ng-value {
+              display: flex;
+              align-items: center;
+              margin: spacing(02);
+              background-color: color(neutral, 02);
+              border-radius: 4px;
+              padding: 2px 9px 2px 6px !important;
+              &-label {
+                order: 0;
+                .typography {
+                  font-size: 12px;
+                  line-height: 20px;
+                  letter-spacing: 0.16px;
+                  font-family: $font-main;
+                  font-weight: 400;
+                }
+              }
+              &-icon {
+                order: 1;
+                margin-left: 7px;
+                color: color(neutral, 07);
+              }
+            }
           }
         }
       }
