--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.html
@@ -83,10 +83,49 @@
         [placeholder]="placeholder"
         [multiple]="multiselect ?? false"
         [closeOnSelect]="!multiselect"
+        [clearSearchOnAdd]="true"
         (change)="onChange($event)"
         (ngModelChange)="selectedChange.emit(selected)"
         (search)="onSearch($event)"
       >
+        <ng-template ng-label-tmp let-item="item" let-clear="clear">
+          <aus-typography
+            [text]="item"
+            class="ng-value-label"
+            [presetClassNames]="
+              multiselect
+                ? ['text-preset-9']
+                : size === 'medium'
+                ? ['text-preset-7--medium']
+                : ['text-preset-8--medium']
+            "
+          ></aus-typography>
+          <button
+            *ngIf="multiselect"
+            class="ng-value-icon right"
+            (click)="clear(item)"
+            [attr.aria-label]="'Deselect ' + item"
+          >
+            <svg
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M7.5 1.205L6.795 0.5L4 3.295L1.205 0.5L0.5 1.205L3.295 4L0.5 6.795L1.205 7.5L4 4.705L6.795 7.5L7.5 6.795L4.705 4L7.5 1.205Z"
+                fill="#464646"
+              />
+            </svg>
+          </button>
+          <span
+            *ngIf="multiselect"
+            class="ng-value-bg-focused"
+            aria-hidden="true"
+            >&nbsp;</span
+          >
+        </ng-template>
         <ng-option *ngFor="let item of items" [value]="item" tabindex="0">
           <aus-typography
             [text]="item"
