--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
@@ -349,20 +349,56 @@
               background-color: color(neutral, 02);
               border-radius: 4px;
               padding: 2px 9px 2px 6px !important;
+              transition: all 0.25s;
+              position: relative;
+              overflow: hidden;
+              &-bg-focused {
+                content: "";
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                background-color: color(neutral, 01);
+                pointer-events: none;
+                transition: all 0.25s;
+                opacity: 0;
+              }
+              &-label,
+              &-icon {
+                position: relative;
+                z-index: 1;
+              }
               &-label {
-                order: 0;
                 .typography {
-                  font-size: 12px;
-                  line-height: 20px;
-                  letter-spacing: 0.16px;
-                  font-family: $font-main;
                   font-weight: 400;
                 }
               }
               &-icon {
-                order: 1;
+                border: 0;
+                padding: 0;
                 margin-left: 7px;
-                color: color(neutral, 07);
+                cursor: pointer;
+                background: transparent;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                svg path {
+                  fill: color(neutral, 07);
+                }
+                &:focus-visible {
+                  box-shadow: 0 0 0 2px color(support, focus);
+                  outline: none;
+                  border: 0;
+                }
+                &:active {
+                  & + .ng-value-bg-focused {
+                    opacity: 1;
+                  }
+                }
+              }
+              &:hover {
+                background-color: color(neutral, 03);
               }
             }
           }
