ADS-26 create datepicker variant

--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.html
@@ -35,6 +35,7 @@
     <div class="dropdown__btns">
       <button
         *ngIf="multiselect && selected?.length"
+        [tabIndex]="isDisabled ? -1 : 0"
         class="dropdown__clear"
         aria-label="Clear input"
         (click)="clearSelected()"
