--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.html
@@ -7,7 +7,8 @@
     'input--size-medium': size === 'medium',
     'input--search': type === 'search',
     'input--negative': statusIcon === 'negative',
-    'input--positive': statusIcon === 'positive'
+    'input--positive': statusIcon === 'positive',
+    'input--datepicker': datepicker
   }"
 >
   <label [for]="name" *ngIf="label">
@@ -154,10 +155,44 @@
     (ngModelChange)="valueChange.emit(value)"
     (keypress)="onKeypress($event)"
     class="input__control"
-    #control="ngModel"
+    #control
     autocomplete="off"
     [mask]="mask || null"
+    (click)="onClick()"
   />
+  <button
+    class="input__datepicker-btn"
+    (click)="toggleCalendar()"
+    aria-label="Toggle calendar"
+    [tabIndex]="isDisabled ? -1 : 0"
+  >
+    <svg
+      width="20"
+      height="22"
+      viewBox="0 0 20 22"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M18 2H17V0H15V2H5V0H3V2H2C0.9 2 0 2.9 0 4V20C0 21.1 0.9 22 2 22H18C19.1 22 20 21.1 20 20V4C20 2.9 19.1 2 18 2ZM18 20H2V9H18V20ZM18 7H2V4H18V7Z"
+        fill="black"
+      />
+    </svg>
+  </button>
+  <div *ngIf="datepicker" class="input__datepicker">
+    <input
+      type="text"
+      matInput
+      [matDatepicker]="picker"
+      (dateChange)="onDateChange($event)"
+      class="input__datepicker-control"
+      tabindex="-1"
+      aria-hidden="true"
+    />
+    <div class="input__datepicker-calendar">
+      <mat-datepicker #picker></mat-datepicker>
+    </div>
+  </div>
 </ng-template>
 
 <ng-template #textarea>
@@ -171,7 +206,7 @@
     [placeholder]="placeholder || ''"
     (ngModelChange)="valueChange.emit(value)"
     class="input__control input__control--textarea"
-    #control="ngModel"
+    #control
     autocomplete="off"
   >
   </textarea>
