--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.scss
@@ -168,9 +168,7 @@
     }
     &-btn {
       position: absolute;
-      top: 50%;
       right: spacing(04);
-      transform: translateY(-50%);
       background-color: transparent;
       padding: 0;
       margin: 0;
@@ -226,7 +224,8 @@
           transform: scale(0.8);
         }
         &__datepicker-btn {
-          transform: translateY(-50%) scale(0.8);
+          top: 8px;
+          transform: scale(0.8);
         }
         &__control {
           padding: spacing(03) spacing(05);
@@ -249,6 +248,9 @@
         }
         &__visibility-toggle {
           top: 13px;
+        }
+        &__datepicker-btn {
+          top: 14px;
         }
         &__control {
           padding: spacing(04) spacing(05);
