ADS-26 hide status message div if no content is passed

--- a/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/dropdown/dropdown.component.scss
@@ -250,6 +250,9 @@
       flex: 1;
       margin-left: spacing(03);
     }
+    &:has(.dropdown__status-content:empty) {
+      display: none;
+    }
   }
   &--negative {
     .dropdown {
